It will add groceries form and js

--- a/index.html
+++ b/index.html
@@ -6,9 +6,43 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
-    <title>Favorite Things</title>
+    <title>Groceries</title>
   </head>
-  <body>
+    <body>
+      <div class="container">
+        <div class="row">
+          <h3>Groceries</h3>
+            <form class="form-group">
+              <div class="col-md-4">
+                <label for="grocery1">Type grocery you need</label>
+                <input id="grocery1" class="control-form" type="text">
+              </div>
+              <div class="col-md-4">
+                <label for="grocery2">Type grocery you need</label>
+                <input id="grocery2" class="control-form" type="text">
+             </div>
+             <div class="col-md-4">
+                <label for="grocery3">Type grocery you need</label>
+                <input id="grocery3" class="control-form" type="text">
+            </div>
+            <div class="col-md-4">
+                <label for="grocery4">Type grocery you need</label>
+                <input id="grocery4" class="control-form" type="text">
+            </div>
+            <div class="col-md-4">
+                <label for="grocery5">Type grocery you need</label>
+                <input id="grocery5" class="control-form" type="text">
+            </div>
+            <button class="btn" type="submit">Submit</button>
+           </form>
+         </div>
 
-  </body>
-</html>
+         <div id="groceries">
+           <h4>List of Groceries You Typed:</h4>
+           <ul>
+
+          </ul>
+        </div>
+       </div>
+    </body>
+  </html>
